fixing layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
-body {
+#root {
+  position: relative;
   overflow-x: hidden;
-  transition: all 0.3s;
-  max-width: 100vw;
+  min-height: 100vh;
 }
-
 * {
   box-sizing: border-box;
 }
@@ -12,7 +11,7 @@ body {
 }
 
 .boxWrapper {
-  width: calc(50% - 15px);
+  width: 100%;
   margin: 0 7.5px 15px;
   position: relative;
   cursor: pointer;
@@ -90,7 +89,7 @@ body {
 .drawer form {
   padding: 10px;
   background-color: #fff;
-  width: 300px;
+  width: 100%;
   height: 100%;
 }
 .drawer svg {
@@ -117,4 +116,13 @@ body {
   left: 50%;
   top: 10px;
   transform: translateX(-50%);
+}
+
+@media screen and (min-width: 768px) {
+  .boxWrapper {
+    width: calc(50% - 15px);
+  }
+  .drawer form {
+    width: 300px;
+  }
 }
